; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/protocols/icmp_echo/main/extr_cmd_ping.c_cmd_ping_on_ping_end.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/protocols/icmp_echo/main/extr_cmd_ping.c_cmd_ping_on_ping_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_PING_PROF_REQUEST = common dso_local global i32 0, align 4
@ESP_PING_PROF_REPLY = common dso_local global i32 0, align 4
@ESP_PING_PROF_IPADDR = common dso_local global i32 0, align 4
@ESP_PING_PROF_DURATION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"\0A--- %s ping statistics ---\0A\00", align 1
@.str.1 = private unnamed_addr constant [66 x i8] c"%d packets transmitted, %d received, %d%% packet loss, time %dms\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @cmd_ping_on_ping_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmd_ping_on_ping_end(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @ESP_PING_PROF_REQUEST, align 4
  %12 = call i32 @esp_ping_get_profile(i32 %10, i32 %11, float* %6, i32 4)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @ESP_PING_PROF_REPLY, align 4
  %15 = call i32 @esp_ping_get_profile(i32 %13, i32 %14, float* %7, i32 4)
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @ESP_PING_PROF_IPADDR, align 4
  %18 = call i32 @esp_ping_get_profile(i32 %16, i32 %17, float* %5, i32 4)
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @ESP_PING_PROF_DURATION, align 4
  %21 = call i32 @esp_ping_get_profile(i32 %19, i32 %20, float* %8, i32 4)
  %22 = load float, float* %7, align 4
  %23 = load float, float* %6, align 4
  %24 = fdiv float %22, %23
  %25 = fsub float 1.000000e+00, %24
  %26 = fmul float %25, 1.000000e+02
  store float %26, float* %9, align 4
  %27 = call i64 @IP_IS_V4(float* %5)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %2
  %30 = call i32* @ip_2_ip4(float* %5)
  %31 = load i32, i32* %30, align 4
  %32 = call i8* @inet_ntoa(i32 %31)
  %33 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8* %32)
  br label %39

34:                                               ; preds = %2
  %35 = call i32* @ip_2_ip6(float* %5)
  %36 = load i32, i32* %35, align 4
  %37 = call i8* @inet6_ntoa(i32 %36)
  %38 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8* %37)
  br label %39

39:                                               ; preds = %34, %29
  %40 = load float, float* %6, align 4
  %41 = fpext float %40 to double
  %42 = load float, float* %7, align 4
  %43 = fpext float %42 to double
  %44 = load float, float* %9, align 4
  %45 = fpext float %44 to double
  %46 = load float, float* %8, align 4
  %47 = fpext float %46 to double
  %48 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.1, i64 0, i64 0), double %41, double %43, double %45, double %47)
  %49 = load i32, i32* %3, align 4
  %50 = call i32 @esp_ping_delete_session(i32 %49)
  ret void
}

declare dso_local i32 @esp_ping_get_profile(i32, i32, float*, i32) #1

declare dso_local i64 @IP_IS_V4(float*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @inet_ntoa(i32) #1

declare dso_local i32* @ip_2_ip4(float*) #1

declare dso_local i8* @inet6_ntoa(i32) #1

declare dso_local i32* @ip_2_ip6(float*) #1

declare dso_local i32 @esp_ping_delete_session(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
